# lumx

./: .gitignore  Cargo.toml  justfile  readme.md
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/lambda_example/: Cargo.toml
examples/lambda_example/src/: components.rs  handlers.rs  main.rs
examples/modules-example/: Cargo.toml
examples/modules-example/src/: healthy.rs  home.rs  lib.rs  main.rs
lumx_axum/: Cargo.toml
lumx_axum/src/: error.rs  extractor.rs  lib.rs  plugin.rs  program.rs  replier.rs  result.rs  router.rs  state.rs  types.rs
lumx_axum/src/middleware/: state.rs
lumx_axum/src/result/: failure.rs
lumx_axum/src/types/: created.rs  failure.rs  filter.rs  pagination.rs
lumx_axum_test/: Cargo.toml
lumx_axum_test/src/: lib.rs  program_ext.rs
lumx_core/: Cargo.toml
lumx_core/src/: app.rs  banner.rs  lib.rs  program.rs  scheduler.rs  tracer.rs  tracing.rs  types.rs
lumx_core/src/plugable/: component.rs  mod.rs  plugin.rs
lumx_domain/: Cargo.toml
lumx_domain/src/: lib.rs  validation.rs
lumx_domain/src/api/: failure.rs  mod.rs  result.rs
lumx_domain/src/api/dtos/: field.rs  filter.rs  mod.rs  pagination.rs
lumx_domain/src/api/ext/: create.rs  find.rs  update.rs
lumx_domain/src/spi/: failure.rs
lumx_passport/: Cargo.toml
lumx_passport/src/middleware/: auth.rs
lumx_sea/: Cargo.toml
lumx_sea/src/: lib.rs
lumx_sea_orm/: Cargo.toml
lumx_sea_orm/src/: lib.rs  paginator.rs  plugin.rs  program.rs
lumx_types/: Cargo.toml
lumx_types/src/: api_result.rs  lib.rs  pagination.rs
lumx_web_api/: Cargo.toml
lumx_web_api/src/: lib.rs
