[workspace]
members = [
    "lumx_core",
    "lumx_sea_orm",
    "lumx_axum",
    "lumx_axum_test",
    "examples/*",
]
resolver = "2"
exclude = ["examples/**"]

[workspace.dependencies]
log = "0.4"
env_logger = { version = "0.11.5" }
tokio = { version = "1.41.1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
serde = { version = "1.0.215", features = ["derive"] }
axum = { version = "0.7" }
thiserror = { version = "1.0" }
lumx_core = { path = "./lumx_core" }
lumx_axum = { path = "./lumx_axum" }
