[workspace]
resolver = "3"
exclude = ["examples/**"]
members = [
    "lumx_core",
    "lumx_sea_orm",
    "lumx_axum",
    "lumx_axum_test",
    "lumx_passport",
    "examples/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["edinsonjim"]
repository = "https://github.com/iDesoftSystems/lumx"

[workspace.dependencies]
log = "0.4.27"
env_logger = { version = "0.11.8" }
tokio = { version = "1.46", features = ["full"] }
async-trait = "0.1.88"
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
axum = { version = "0.8.4" }
thiserror = { version = "2.0.12" }
tower-http = { version = "0.6.6", features = ["trace"] }
tower = { version = "0.5.2", features = ["util"] }
lumx_core = { path = "./lumx_core" }
lumx_axum = { path = "./lumx_axum" }
passport_jwt = { git = "https://github.com/iDesoftSystems/passport.git", branch = "main" }
passport_core = { git = "https://github.com/iDesoftSystems/passport.git", branch = "main" }
