[package]
name = "lumx_axum"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lumx_core = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tower = { workspace = true }
