[package]
name = "lumx_sea_orm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
mysql = ["sea-orm/sqlx-mysql", "sea-orm/runtime-tokio-rustls"]
sqlite = ["sea-orm/sqlx-sqlite", "sea-orm/runtime-tokio-rustls"]

[dependencies]
lumx_core = { workspace = true }
sea-orm = { version = "1.0", features = [
    "sqlx-mysql",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
async-trait = { workspace = true }
